--- a/PackInfo.cfg
+++ b/PackInfo.cfg
@@ -58,4 +58,4 @@ waila,1.5.10,https://minecraft.curseforge.com/projects/waila/files/2230518/downl
 wailaharvestability,1.1.6,https://minecraft.curseforge.com/projects/waila-harvestability/files/2270923/download,mod
 wailaplugins,0.2.0-25,https://minecraft.curseforge.com/projects/waila-plugins/files/2351717/download,mod
 wawla,1.0.5.120,https://minecraft.curseforge.com/projects/wawla-what-are-we-looking-at/files/2298772/download,mod
-
+Forge MultiPart,1.2.0.345,https://minecraft.curseforge.com/projects/forge-multi-part/files/2242993/download,mod
