--- a/PackInfo.cfg
+++ b/PackInfo.cfg
@@ -13,7 +13,7 @@ codechickencore,1.0.7.47,https://minecraft.curseforge.com/projects/codechickenco
 cofhcore,3.1.4-32,https://minecraft.curseforge.com/projects/cofhcore/files/2388750/download,mod
 endercore,0.2.0.39_beta,https://minecraft.curseforge.com/projects/endercore/files/2331048/download,mod
 enderio,2.3.0.429_beta,https://minecraft.curseforge.com/projects/ender-io/files/2322348/download,mod
-enderstorage,http://chickenbones.net/maven/codechicken/EnderStorage/1.7.10-1.4.7.38/EnderStorage-1.7.10-1.4.7.38-universal.jar,mod
+enderstorage,1.4.7.38,http://chickenbones.net/maven/codechicken/EnderStorage/1.7.10-1.4.7.38/EnderStorage-1.7.10-1.4.7.38-universal.jar,mod
 enderutilities,0.5.3,https://minecraft.curseforge.com/projects/ender-utilities/files/2297555/download,mod
 enhancedportals,3.0.12,https://minecraft.curseforge.com/projects/enhanced-portals-3/files/2242378/download,mod
 extrautilities,1.2.12,https://minecraft.curseforge.com/projects/extra-utilities/files/2264383/download,mod
