--- a/PackInfo.cfg
+++ b/PackInfo.cfg
@@ -21,7 +21,7 @@ enhancedportals,3.0.12,https://minecraft.curseforge.com/projects/enhanced-portal
 extrautilities,1.2.12,https://minecraft.curseforge.com/projects/extra-utilities/files/2264383/download,mod
 Ez Storage,1.1.0,https://minecraft.curseforge.com/projects/ezstorage/files/2252273/download,mod
 forestry,4.2.16.64,https://minecraft.curseforge.com/projects/forestry/files/2333823/download,mod
-galacticraftcore,1.7-3.0.12.490,https://ci.micdoodle8.com/job/Galacticraft-1.7/490/artifact/Forge/build/libs/GalacticraftCore-1.7-3.0.12.490.ja,mod
+galacticraftcore,1.7-3.0.12.490,https://ci.micdoodle8.com/job/Galacticraft-1.7/490/artifact/Forge/build/libs/GalacticraftCore-1.7-3.0.12.490.jar,mod
 galacticraftplanets,1.7-3.0.12.490,https://ci.micdoodle8.com/job/Galacticraft-1.7/490/artifact/Forge/build/libs/Galacticraft-Planets-1.7-3.0.12.490.jar,mod
 gardenstuff,1.7.0,https://minecraft.curseforge.com/projects/garden-stuff/files/2269692/download,mod
 highlands,1.7.2-v-2.2.3,https://minecraft.curseforge.com/projects/highlands/files/2227924/download,mod
